@@ -1,4 +1,13 @@
-JavaFx application
+JavaFx application frontend
+
+Structure:
+- tecajnica/  -> JavaFX application (Maven)
+
+Instructions:
+1) mvn clean package
+2) java --module-path target/libs --add-modules javafx.controls,javafx.fxml -jar target/fx-exchange-rate-1.0-SNAPSHOT.jar
+
+JavaFx application frontend
 
 Structure:
 - tecajnica/  -> JavaFX application (Maven)
